--- a/src/locales/es.po
+++ b/src/locales/es.po
@@ -3716,7 +3716,7 @@ msgstr "Página de Inicio"
 
 #: src/routes/+page.svelte
 msgid "Diamond Planner"
-msgstr "Planificador de Diamantes"
+msgstr "Diamond Planner"
 
 #: src/routes/+page.svelte
 msgid "Berlin Skylarks Team App"
