--- a/src/locales/de.po
+++ b/src/locales/de.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-10T18:43:43.303Z\n"
-"PO-Revision-Date: 2025-11-22T10:28:59.586Z\n"
+"PO-Revision-Date: 2025-12-05T17:14:58.420Z\n"
 "Last-Translator: \n"
 "Language: de\n"
 "Language-Team: \n"
@@ -350,7 +350,7 @@ msgstr "Daten pro Liga"
 msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "Ein einzelnes Team kann in BSM pro Saison mehreren Ligen zugeordnet werden."
 
-#. placeholder {0}: favoriteTeam?.team.name
+#. placeholder {0}: favoriteTeam?.name
 #. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/(tib)/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
@@ -2113,8 +2113,8 @@ msgstr "Sitzplätze"
 msgid "No ballparks found."
 msgstr "Keine Ballparks gefunden."
 
-#. placeholder {0}: clubTeam.team.name
-#. placeholder {1}: clubTeam.team.season
+#. placeholder {0}: clubTeam.name
+#. placeholder {1}: clubTeam.season
 #. placeholder {0}: clubTeam.team.name
 #. placeholder {1}: clubTeam.team.season
 #: src/routes/(tib)/teams/[id]/+page.svelte
@@ -2904,9 +2904,14 @@ msgstr "Diese Daten öffentlich auf der Team-Website anzeigen"
 
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "Box Score for this game could not be loaded or is unavailable."
-msgstr ""
+msgstr "Ergebnisse für dieses Spiel konnten nicht geladen werden oder sind nicht verfügbar."
 
 #. placeholder {0}: error.message
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading box score: {0}"
-msgstr ""
+msgstr "Fehler beim Laden der Ergebnisse: {0}"
+
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+msgid "No data available."
+msgstr "Keine Daten verfügbar."
