--- a/src/locales/en.po
+++ b/src/locales/en.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-10T18:43:43.220Z\n"
-"PO-Revision-Date: 2025-11-22T10:28:59.583Z\n"
+"PO-Revision-Date: 2025-12-05T17:14:58.411Z\n"
 "Last-Translator: \n"
 "Language: en\n"
 "Language-Team: \n"
@@ -355,7 +355,7 @@ msgstr "Data per League"
 msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "A single team can be associated to several leagues per season in BSM."
 
-#. placeholder {0}: favoriteTeam?.team.name
+#. placeholder {0}: favoriteTeam?.name
 #. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/(tib)/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
@@ -2098,8 +2098,8 @@ msgstr ""
 msgid "Tabelle"
 msgstr "Tabelle"
 
-#. placeholder {0}: clubTeam.team.name
-#. placeholder {1}: clubTeam.team.season
+#. placeholder {0}: clubTeam.name
+#. placeholder {1}: clubTeam.season
 #. placeholder {0}: clubTeam.team.name
 #. placeholder {1}: clubTeam.team.season
 #: src/routes/(tib)/teams/[id]/+page.svelte
@@ -2924,3 +2924,8 @@ msgstr "Box Score for this game could not be loaded or is unavailable."
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading box score: {0}"
 msgstr "error loading box score: {0}"
+
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+msgid "No data available."
+msgstr "No data available."
