--- a/src/locales/fr.po
+++ b/src/locales/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-12T16:34:19.018Z\n"
-"PO-Revision-Date: 2025-11-22T10:28:59.588Z\n"
+"PO-Revision-Date: 2025-12-05T17:14:58.425Z\n"
 "Last-Translator: \n"
 "Language: fr\n"
 "Language-Team: \n"
@@ -494,7 +494,7 @@ msgstr "Données par ligue"
 msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "Une seule équipe peut être associée à plusieurs ligues par saison dans BSM."
 
-#. placeholder {0}: favoriteTeam?.team.name
+#. placeholder {0}: favoriteTeam?.name
 #. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/(tib)/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
@@ -2102,8 +2102,8 @@ msgstr "Une erreur s'est produite lors de la récupération des données du joue
 msgid "Stats"
 msgstr "Stats"
 
-#. placeholder {0}: clubTeam.team.name
-#. placeholder {1}: clubTeam.team.season
+#. placeholder {0}: clubTeam.name
+#. placeholder {1}: clubTeam.season
 #. placeholder {0}: clubTeam.team.name
 #. placeholder {1}: clubTeam.team.season
 #: src/routes/(tib)/teams/[id]/+page.svelte
@@ -2911,9 +2911,14 @@ msgstr "Afficher ces données publiquement sur le site web de l'équipe"
 
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "Box Score for this game could not be loaded or is unavailable."
-msgstr ""
+msgstr "La feuille de match pour ce match n'a pas pu être chargée ou n'est pas disponible."
 
 #. placeholder {0}: error.message
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading box score: {0}"
-msgstr ""
+msgstr "erreur lors du chargement de la feuille de match : {0}"
+
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+msgid "No data available."
+msgstr "Aucune donnée disponible."
