--- a/src/locales/pl.po
+++ b/src/locales/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-12T16:35:43.595Z\n"
-"PO-Revision-Date: 2025-11-22T10:28:59.592Z\n"
+"PO-Revision-Date: 2025-12-05T17:14:58.434Z\n"
 "Last-Translator: \n"
 "Language: pl\n"
 "Language-Team: \n"
@@ -494,7 +494,7 @@ msgstr "Dane na ligę"
 msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "W BSM jeden zespół może być powiązany z kilkoma ligami w sezonie."
 
-#. placeholder {0}: favoriteTeam?.team.name
+#. placeholder {0}: favoriteTeam?.name
 #. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/(tib)/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
@@ -2101,8 +2101,8 @@ msgstr "Wystąpił błąd podczas pobierania danych gracza: {0}.<0/> Źródło d
 msgid "Stats"
 msgstr "Statystyki"
 
-#. placeholder {0}: clubTeam.team.name
-#. placeholder {1}: clubTeam.team.season
+#. placeholder {0}: clubTeam.name
+#. placeholder {1}: clubTeam.season
 #. placeholder {0}: clubTeam.team.name
 #. placeholder {1}: clubTeam.team.season
 #: src/routes/(tib)/teams/[id]/+page.svelte
@@ -2913,9 +2913,14 @@ msgstr "Wyświetlaj te dane publicznie na stronie internetowej drużyny"
 
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "Box Score for this game could not be loaded or is unavailable."
-msgstr ""
+msgstr "Wyniki meczu dla tej gry nie mogły zostać załadowane lub są niedostępne."
 
 #. placeholder {0}: error.message
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading box score: {0}"
-msgstr ""
+msgstr "błąd podczas ładowania wyników meczu: {0}"
+
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+#: src/lib/tib/components/favorite/StreakGraphSection.svelte
+msgid "No data available."
+msgstr "Brak dostępnych danych."
